[build-system]
requires = ["setuptools>=40.8.0"]
build-backend = "setuptools.build_meta:__legacy__"

# [project]
# name = "htmldate"
# readme = "README.md"
# description = "..."
# license = {text = "Apache 2.0"}
# dynamic = ["version"]
# requires-python = ">= 3.6"
# keywords = [""]
# classifiers = [""]

# [project.scripts]
# htmldate = "htmldate.cli:main"

# [project.urls]
# ...

[tool.pytest.ini_options]
testpaths = "tests/*_tests.py"
